--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
     
                 <div class="divs">
-                    <a style="text-decoration: none;" href="https://to-do-app-kfqo.vercel.app/" target="_blank" >
+                    <a style="text-decoration: none;" href="https://to-do-app-rho-mauve.vercel.app/" target="_blank" >
                         <div class="card">
                             <img class="arrow" src="arrow.svg" alt="">
                             <h2>NOTES AND TO-DO</h2>
